--- a/baselib/res/src/main/res/values/colors.xml
+++ b/baselib/res/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="textColor">#333</color>
     <color name="textColorDark">#000</color>
 
+    <color name="block_bg">#f6f8fa</color>
+
 </resources>
