--- a/baselib/github_base/src/main/res/layout/item_md_code_bock.xml
+++ b/baselib/github_base/src/main/res/layout/item_md_code_bock.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#0f000000"
+    android:background="#05000000"
     android:fontFamily="monospace"
     android:lineSpacingExtra="@dimen/text_view_line_spacing"
     android:layout_marginTop="@dimen/margin_vertical_material"
@@ -11,5 +12,7 @@
     android:layout_marginEnd="@dimen/margin_horizontal_material"
     android:layout_marginBottom="@dimen/margin_vertical_material"
     android:textAppearance="?android:attr/textAppearanceMedium"
-    android:textSize="@dimen/text_size_body_2_material" />
+    android:textSize="@dimen/text_size_body_2_material"
+    tools:text="test" />
+
 
