fix RepoDetailActivity Viewpager2 bug

--- a/baselib/res/src/main/res/values/theme_app.xml
+++ b/baselib/res/src/main/res/values/theme_app.xml
@@ -18,6 +18,7 @@
         <item name="colorPrimaryText">@color/primaryTextColorNormal</item>
         <item name="colorSecondaryText">@color/secondaryTextColorNormal</item>
 
+        <item name="expandedTitleTextAppearance">@style/TextAppearance.Adaptive.Headline5</item>
     </style>
 
 
@@ -36,6 +37,8 @@
 
         <item name="colorPrimaryText">@color/primaryTextColorNight</item>
         <item name="colorSecondaryText">@color/secondaryTextColorNormal</item>
+
+        <item name="expandedTitleTextAppearance">@style/TextAppearance.Adaptive.Headline5</item>
 
     </style>
     
