--- a/baselib/github_base/src/main/res/layout/fragment_base_recycler_view.xml
+++ b/baselib/github_base/src/main/res/layout/fragment_base_recycler_view.xml
@@ -28,6 +28,7 @@
             layout="@layout/recycler_view" />
 
         <include
+            android:id="@+id/in_loading"
             layout="@layout/page_loading_state"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
