--- a/modules/oauth2/src/main/res/layout/fragment_oauth2.xml
+++ b/modules/oauth2/src/main/res/layout/fragment_oauth2.xml
@@ -40,7 +40,7 @@
             android:layout_height="@dimen/button_min_height_material"
             android:layout_margin="@dimen/margin_horizontal_material"
             android:textAppearance="@style/TextAppearance.Adaptive.Body1"
-            android:onClickListener="@{authorizeListener}"
+            app:onClickListener="@{authorizeListener}"
             android:text="@string/app_name"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
