--- a/modules/repository/src/main/res/navigation/repo_files.xml
+++ b/modules/repository/src/main/res/navigation/repo_files.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation_repo_detail"
-    app:startDestination="@id/filesScreen"
-    tools:ignore="UnusedNavigation">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/repo_files"
+    app:startDestination="@id/files"
+    tools:ignore="InvalidNavigation">
 
-    <fragment android:id="@+id/filesScreen"
-        android:name="com.tangpj.repository.ui.detail.fileContent.FileContentFragment"
-        android:label="FileContentFragment"
-        tools:layout="@layout/fragment_file_content"
-        >
+    <fragment android:id="@+id/files"
+        android:name="com.tangpj.repository.ui.detail.files.FilesFragment"
+        android:label="Files"
+        tools:layout="@layout/recycler_view">
 
         <argument
             android:name="repoDetailQuery"
@@ -30,8 +29,8 @@
             app:argType="string"/>
 
         <action
-            android:id="@+id/file_content_init"
-            app:destination="@+id/filesScreen"/>
+            android:id="@+id/files_init"
+            app:destination="@+id/files"/>
 
     </fragment>
 
