--- a/baselib/github_base/src/main/res/layout/fragment_base_recycler_view.xml
+++ b/baselib/github_base/src/main/res/layout/fragment_base_recycler_view.xml
@@ -1,35 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    
-    <data>
 
-        <import type="com.tangpj.paging.Listing"/>
-
-        <variable
-            name="isShowLoading"
-            type="boolean" />
-
-        <variable name="listing" type="Listing"/>
-
-    </data>
 
     <FrameLayout
+        android:id="@+id/fl_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <include
             android:id="@+id/in_rv"
             layout="@layout/recycler_view" />
-
-        <include
-            android:id="@+id/in_loading"
-            layout="@layout/page_loading_state"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            app:isShowLoading="@{isShowLoading}"
-            app:listing="@{listing}"/>
 
     </FrameLayout>
 
