--- a/baselib/github_base/src/main/res/layout/loading_state.xml
+++ b/baselib/github_base/src/main/res/layout/loading_state.xml
@@ -51,8 +51,8 @@
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_error_msg"
-            android:text="@{resource.networkState.msg ?? (resource.data == null ? @string/error_response_is_null : @string/unknown_error)}"
-            app:visibleGone="@{resource.networkState.status == Status.ERROR || resource.data == null}"
+            android:text="@{resource.networkState.msg ?? @string/unknown_error}"
+            app:visibleGone="@{resource.networkState.status == Status.ERROR}"
             tools:visibility="visible"/>
     </LinearLayout>
 </layout>
