--- a/modules/repository/src/main/res/layout/item_file.xml
+++ b/modules/repository/src/main/res/layout/item_file.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="@dimen/margin_vertical_material"
         android:layout_marginBottom="@dimen/margin_vertical_material"
         android:gravity="center_vertical"
-        android:drawableStart="@{fileItem.fileIconId}"
+        android:drawableStart="@drawable/ic_folder"
         android:text="@{fileItem.name}"
         tool:text="README.md"
         tool:drawableStart="@drawable/ic_folder"
