fix ViewerFragment bug

--- a/modules/repository/src/main/res/layout/fragment_file_content.xml
+++ b/modules/repository/src/main/res/layout/fragment_file_content.xml
@@ -12,16 +12,22 @@
             type="LiveData&lt;Resource&lt;FileContent>>" />
     </data>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <com.prettifier.pretty.PrettifyWebView
             android:id="@+id/webView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:fileContent="@{fileContent.data}"
             app:webview_background="?android:windowBackground"/>
-    </FrameLayout>
+    </LinearLayout>
 
 </layout>
