feat #add RepoDetailFragment

--- a/modules/repository/src/main/res/layout/activity_repo_detail.xml
+++ b/modules/repository/src/main/res/layout/activity_repo_detail.xml
@@ -3,28 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tl_repo_title"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimaryLight"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/vp_repo_content"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:filterTouchesWhenObscured="true"
-            app:layout_constraintTop_toBottomOf="@+id/tl_repo_title"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:layout_height="match_parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </layout>
