--- a/modules/repository/src/main/res/navigation/viewer.xml
+++ b/modules/repository/src/main/res/navigation/viewer.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigation_repo_detail"
-    app:startDestination="@id/files_screen"
+    app:startDestination="@id/viewer"
     tools:ignore="UnusedNavigation">
 
-    <fragment android:id="@+id/files_screen"
+    <fragment android:id="@+id/viewer"
         android:name="com.tangpj.repository.ui.detail.viewer.ViewerFragment"
         android:label="FileContent"
         tools:layout="@layout/fragment_file_content"
@@ -31,9 +31,9 @@
 
         <action
             android:id="@+id/file_content_init"
-            app:popUpTo="@+id/files_screen"
+            app:popUpTo="@+id/viewer"
             app:popUpToInclusive="true"
-            app:destination="@+id/files_screen"/>
+            app:destination="@+id/viewer"/>
 
     </fragment>
 
