--- a/baselib/res/src/main/res/drawable/ic_arrow.xml
+++ b/baselib/res/src/main/res/drawable/ic_arrow.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="48"
     android:viewportWidth="48">
 
-    <path android:fillColor="?attr/colorPrimaryDark"
+    <path android:fillColor="?attr/colorNavigationIcon"
         android:pathData="M40 22H15.66l11.17-11.17L24 8 8 24l16 16 2.83-2.83L15.66 26H40v-4z"/>
 
 </vector>
