--- a/modules/repository/src/main/res/layout/activity_repo_detail.xml
+++ b/modules/repository/src/main/res/layout/activity_repo_detail.xml
@@ -7,8 +7,23 @@
         android:layout_height="match_parent">
 
         <FrameLayout
+            android:id="@+id/nav_host_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bottom_nav"
+            />
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_nav"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:menu="@menu/bottom_nav_repo_detail"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
