--- a/modules/repository/src/main/res/layout/fragment_path_files.xml
+++ b/modules/repository/src/main/res/layout/fragment_path_files.xml
@@ -17,7 +17,7 @@
 
             />
         <FrameLayout
-            android:id="@+id/nav_container"
+            android:id="@+id/nav_host_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
