--- a/baselib/res/src/main/res/drawable/ic_keyboard_arrow_right.xml
+++ b/baselib/res/src/main/res/drawable/ic_keyboard_arrow_right.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="48"
     android:viewportWidth="48">
 
-    <path android:fillColor="?attr/colorPrimaryDark"
+    <path android:fillColor="?attr/colorNavigationIcon"
         android:pathData="M17.17 32.92l9.17-9.17-9.17-9.17L20 11.75l12 12-12 12z"
         />
 
