RepoDetailActivity support showHomeAsUp

--- a/modules/repository/src/main/res/navigation/repo_detail.xml
+++ b/modules/repository/src/main/res/navigation/repo_detail.xml
@@ -7,7 +7,7 @@
 
     <fragment android:id="@+id/repo_detail"
         android:name="com.tangpj.repository.ui.detail.RepoDetailFragment"
-        android:label="@string/repo_detail"
+        app:defaultNavHost="true"
         tools:layout="@layout/fragment_repo_detail">
 
         <argument
