--- a/baselib/res/src/main/res/values-sw360dp/dimens.xml
+++ b/baselib/res/src/main/res/values-sw360dp/dimens.xml
@@ -28,6 +28,7 @@
   <dimen name='text_size_h3_material'>48sp</dimen>
   <dimen name='text_size_h2_material'>60sp</dimen>
   <dimen name='text_size_h1_material'>96sp</dimen>
+  <dimen name='icon_xxxhdpi'>72dp</dimen>
   <dimen name='icon_xxhdpi'>48dp</dimen>
   <dimen name='icon_xhdpi'>36dp</dimen>
   <dimen name='icon_hdpi'>24dp</dimen>
