--- a/modules/repository/src/main/res/layout/item_commit.xml
+++ b/modules/repository/src/main/res/layout/item_commit.xml
@@ -1,16 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginStart="@dimen/padding_horizontal_material"
+    android:layout_marginEnd="@dimen/padding_horizontal_material"
+    android:layout_marginBottom="@dimen/padding_horizontal_material"
+    >
 
-    <ImageView
-        android:layout_width="@dimen/icon_xxxhdpi"
-        android:layout_height="@dimen/icon_xxxhdpi"
-        android:layout_marginTop="@dimen/margin_vertical_material"
-        android:layout_marginStart="@dimen/margin_horizontal_material"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:layout_width="@dimen/icon_xxhdpi"
+            android:layout_height="@dimen/icon_xxhdpi"
+            android:layout_marginTop="@dimen/margin_vertical_material"
+            android:layout_marginStart="@dimen/margin_horizontal_material"
+            android:layout_marginBottom="@dimen/margin_vertical_material"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
