--- a/modules/repository/src/main/res/layout/item_commit.xml
+++ b/modules/repository/src/main/res/layout/item_commit.xml
@@ -1,31 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/padding_horizontal_material"
-    android:layout_marginEnd="@dimen/padding_horizontal_material"
-    android:layout_marginBottom="@dimen/padding_horizontal_material"
+    xmlns:tools="http://schemas.android.com/tools"
     >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
+        <import type="com.tangpj.github.utils.DataTimeUtilsKt"/>
+        <variable
+            name="commit"
+            type="com.tangpj.repository.vo.CommitVo" />
+
+    </data>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/padding_horizontal_material"
+        android:layout_marginEnd="@dimen/padding_horizontal_material"
+        android:layout_marginBottom="@dimen/padding_horizontal_material">
 
-        <ImageView
-            android:layout_width="@dimen/icon_xxhdpi"
-            android:layout_height="@dimen/icon_xxhdpi"
-            android:layout_marginTop="@dimen/margin_vertical_material"
-            android:layout_marginStart="@dimen/margin_horizontal_material"
-            android:layout_marginBottom="@dimen/margin_vertical_material"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/iv_avatar"
+                android:layout_width="@dimen/icon_xxhdpi"
+                android:layout_height="@dimen/icon_xxhdpi"
+                android:layout_marginTop="@dimen/margin_vertical_material"
+                android:layout_marginStart="@dimen/margin_horizontal_material"
+                android:layout_marginBottom="@dimen/margin_vertical_material"
+                app:imageUrl="@{commit.committer.avatarUrl}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:src="@mipmap/github_logo"
+                />
+
+            <TextView
+                android:id="@+id/tv_message"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:layout_marginTop="@dimen/padding_vertical_material"
+                android:layout_marginStart="@dimen/margin_horizontal_material"
+                android:layout_marginEnd="@dimen/margin_horizontal_material"
+                android:text="@{commit.commit.message}"
+                app:layout_constraintTop_toTopOf="@+id/iv_avatar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/iv_avatar"
+                style="@style/TextAppearance.Adaptive.Body1"
+                tools:text="hello commit"
+                />
+
+            <TextView
+                android:id="@+id/tv_committer"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:ellipsize="end"
+                android:layout_marginEnd="@dimen/margin_horizontal_material"
+                android:layout_marginTop="@dimen/padding_vertical_material"
+                android:text="@{commit.committer.name}"
+                app:layout_constraintStart_toStartOf="@+id/tv_message"
+                app:layout_constraintTop_toBottomOf="@+id/tv_message"
+                app:layout_constraintEnd_toEndOf="parent"
+                style="@style/TextAppearance.Adaptive.Caption"
+                tools:text="tang"
+                />
+
+            <TextView
+                android:id="@+id/tv_timeline"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:ellipsize="end"
+                android:layout_marginEnd="@dimen/margin_horizontal_material"
+                android:layout_marginTop="@dimen/padding_vertical_material"
+                app:timeline="@{commit.commit.committedDate}"
+                app:layout_constraintStart_toStartOf="@+id/tv_message"
+                app:layout_constraintTop_toBottomOf="@+id/tv_message"
+                app:layout_constraintEnd_toEndOf="parent"
+                style="@style/TextAppearance.Adaptive.Caption"
+                tools:text="tang"
+                />
 
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
+    </androidx.cardview.widget.CardView>
+</layout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.cardview.widget.CardView>
