--- a/modules/repository/src/main/res/navigation/viewer.xml
+++ b/modules/repository/src/main/res/navigation/viewer.xml
@@ -25,7 +25,7 @@
 
         <argument
             android:name="path"
-            android:defaultValue="README.md"
+            android:defaultValue=":README.md"
             app:nullable="true"
             app:argType="string"/>
 
